add table Inventory. All good job

--- a/manager-app/src/main/resources/templates/main/flowers/flower_create.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_create.html
@@ -146,11 +146,11 @@
             </div>
             <div class="input-container">
                 <label for="accountingQuantity" class="input-label">Учётное количество:</label>
-                <input type="number" id="accountingQuantity" name="accountingQuantity"  data-th-value="${payload?.accountingQuantity}"/>
+                <input type="number" id="accountingQuantity" name="accountingQuantity" />
             </div>
             <div class="input-container">
                 <label for="actualQuantity" class="input-label">Фактическое количество:</label>
-                <input type="number" id="actualQuantity" name="actualQuantity"  data-th-value="${payload?.actualQuantity}"/>
+                <input type="number" id="actualQuantity" name="actualQuantity" />
             </div>
             <input type="submit" value="Добавить цветок"/>
         </form>
