--- a/manager-app/src/main/resources/templates/main/flowers/flower_info.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_info.html
@@ -62,8 +62,8 @@
     <li> <strong>Тип </strong>: <span data-th-text="${flower.typeFlower.typeName}"></span> </li>
     <li> <strong>Цена </strong>: <span data-th-text="${flower.price}"></span> </li>
     <li> <strong>Наценка </strong>: <span data-th-text="${flower.extraCharge}"></span> </li>
-    <li> <strong>Учётное количестов </strong>: <span data-th-text="${flower.accountingQuantity}"></span> </li>
-    <li> <strong>Фактичесокое количество </strong>: <span data-th-text="${flower.actualQuantity}"></span> </li>
+    <li> <strong>Учётное количестов </strong>: <span data-th-text="${flower.inventory.accountingQuantity}"></span> </li>
+    <li> <strong>Фактичесокое количество </strong>: <span data-th-text="${flower.inventory.actualQuantity}"></span> </li>
 </ul>
 
 
