--- a/manager-app/src/main/resources/templates/main/flowers/flower_update.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_update.html
@@ -135,11 +135,11 @@
             </div>
             <div class="input-container">
                 <label for="accountingQuantity" class="input-label">Учётное количество:</label>
-                <input type="number" id="accountingQuantity" name="accountingQuantity"  data-th-value="${flower.accountingQuantity}"/>
+                <input type="number" id="accountingQuantity" name="accountingQuantity"  data-th-value="${flower.inventory.accountingQuantity}"/>
             </div>
             <div class="input-container">
                 <label for="actualQuantity" class="input-label">Фактическое количество:</label>
-                <input type="number" id="actualQuantity" name="actualQuantity"  data-th-value="${flower.actualQuantity}"/>
+                <input type="number" id="actualQuantity" name="actualQuantity"  data-th-value="${flower.inventory.actualQuantity}"/>
             </div>
             <input type="submit" value="Обновить"/>
         </form>
