--- a/manager-app/src/main/resources/templates/main/supplier/supplier_list_page.html
+++ b/manager-app/src/main/resources/templates/main/supplier/supplier_list_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список цветов</title>
+    <title>Список поставщиков</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
@@ -74,53 +74,35 @@
 <body>
 
 <div class="container">
-    <h1>Список цветов</h1>
+    <h1>Список поставщиков</h1>
 
-    <div th:if="${flowers.isEmpty()}">
-        <p>Цветов нет.</p>
+    <div th:if="${suppliers.isEmpty()}">
+        <p>Поставщиков нет</p>
     </div>
 
     <table>
         <tr>
-            <th>Название цветка</th>
-            <th>Цена</th>
-            <th>Наценка</th>
-            <th>Учётное количество</th>
-            <th>Фактическое количество</th>
-            <th>Подробная информация</th>
+            <th>Название</th>
+            <th>Город</th>
+            <th>Адрес</th>
         </tr>
-        <tr th:each="flower: ${flowers}">
-            <td th:text="${flower.title}">Цветок</td>
-            <td th:text="${flower.price + ' руб.'}">Цена</td>
-            <td th:text="${flower.extraCharge + ' руб.'}">Наценка</td>
-            <td th:text="${flower.inventory.accountingQuantity}">Учётное количество</td>
-            <td th:text="${flower.inventory.actualQuantity}">Фактическое количество</td>
-            <td><a data-th-href="@{/main/flower/{flowerId}/info(flowerId=${flower.id})}" class="info-link">Подробнее</a></td>
+        <tr th:each="supplier: ${suppliers}">
+            <td th:text="${supplier.supplierName}">Название</td>
+            <td th:text="${supplier.city}">Город</td>
+            <td th:text="${supplier.address}">Адрес</td>
+            <td><a data-th-href="@{/main/supplier/{supplierId}/info(supplierId=${supplier.id})}" class="info-link">Подробнее</a></td>
         </tr>
     </table>
 
     <a data-th-href="@{/main/flowers/create}" class="add-button">
-        <i class="fas fa-plus"></i> Добавить Цветок
-    </a>
-
-    <a data-th-href="@{/main/supply-flowers/sum}" class="add-button">
-        <i class="fas fa-plus"></i> Поставка
-    </a>
-
-
-    <a data-th-href="@{/main/supply-flowers/deduct}" class="add-button">
-        <i class="fas fa-plus"></i> Отнять
+        <i class="fas fa-plus"></i> Добавить тип
     </a>
 
 
     <a data-th-href="@{/main/type_flower/list}" class="add-button">
-        <i class="fas fa-plus"></i> Список типов
+        <i class="fas fa-plus"></i>  Назад
     </a>
 
-
-    <a data-th-href="@{/main/suppliers/list}" class="add-button">
-        <i class="fas fa-plus"></i> Поставщики
-    </a>
 </div>
 
 </body>
