--- a/manager-app/src/main/resources/templates/main/flowers/flower_info.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_info.html
@@ -74,7 +74,7 @@
 
 
 <form method="get" >
-    <a data-th-href="@{@{/main/flower/{flowerId}/update(flowerId=${flower.id})}}">
+    <a data-th-href="@{/main/flower/{flowerId}/update(flowerId=${flower.id})}">
         <button type="button">Обновить</button></a>
 </form>
 
