fixed bag with button back in list supplier

--- a/manager-app/src/main/resources/templates/main/supplier/supplier_list_page.html
+++ b/manager-app/src/main/resources/templates/main/supplier/supplier_list_page.html
@@ -99,7 +99,7 @@
     </a>
 
 
-    <a data-th-href="@{/main/flowers/suppliers/list}" class="add-button">
+    <a data-th-href="@{/main/flowers/list}" class="add-button">
         <i class="fas fa-plus"></i>  Назад
     </a>
 
