--- a/manager-app/src/main/resources/templates/main/flowers/flower_info.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_info.html
@@ -60,6 +60,7 @@
     <li> <strong>ID </strong>: <span data-th-text="${flower.id}"></span> </li>
     <li> <strong>Название </strong>: <span data-th-text="${flower.title}"></span> </li>
     <li> <strong>Тип </strong>: <span data-th-text="${flower.typeFlower.typeName}"></span> </li>
+    <li> <strong>Поставщик </strong>: <span data-th-text="${flower.suppliers.supplierName}"></span> </li>
     <li> <strong>Цена </strong>: <span data-th-text="${flower.price}"></span> </li>
     <li> <strong>Наценка </strong>: <span data-th-text="${flower.extraCharge}"></span> </li>
     <li> <strong>Учётное количестов </strong>: <span data-th-text="${flower.inventory.accountingQuantity}"></span> </li>
