--- a/manager-app/src/main/resources/templates/main/flowers/flowers_list.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flowers_list.html
@@ -104,13 +104,9 @@
     </a>
 
     <a data-th-href="@{/main/supply-flowers/sum}" class="add-button">
-        <i class="fas fa-plus"></i> Поставка
+        <i class="fas fa-plus"></i> Инвентарь
     </a>
 
-
-    <a data-th-href="@{/main/supply-flowers/deduct}" class="add-button">
-        <i class="fas fa-plus"></i> Отнять
-    </a>
 
 
     <a data-th-href="@{/main/type_flower/list}" class="add-button">
