--- a/manager-app/src/main/resources/templates/main/supply-flowers/supply_deduct_flowers_page.html
+++ b/manager-app/src/main/resources/templates/main/supply-flowers/supply_deduct_flowers_page.html
@@ -74,26 +74,18 @@
 <body>
 
 <div class="container">
-    <h1>Список цветов</h1>
+    <h1> Инвентарь </h1>
         <table>
             <tr>
                 <th>Название цветка</th>
                 <th>Учётное количество</th>
                 <th>Фактическое количество</th>
-                <th>Отнять</th>
 
             </tr>
             <tr th:each="flower: ${flowers}">
                 <td th:text="${flower.title}">Цветок</td>
                 <td th:text="${flower.inventory.accountingQuantity}">Учётное количество</td>
                 <td th:text="${flower.inventory.actualQuantity}">Фактическое количество</td>
-                <td>
-                    <form th:action="@{/main/supply-flowers/deduct}" method="post">
-                        <input type="hidden" name="flowerId" th:value="${flower.id}" />
-                        <input type="number" name="addedQuantity" min="0" />
-                        <button type="submit" class="add-button">Отнять</button>
-                    </form>
-                </td>
             </tr>
         </table>
 </div>
