--- a/manager-app/src/main/resources/templates/main/flowers/flower_create.html
+++ b/manager-app/src/main/resources/templates/main/flowers/flower_create.html
@@ -186,12 +186,12 @@
                 <input type="number" id="extraCharge" name="extraCharge" data-th-value="${payload?.extraCharge}"/>
             </div>
             <div class="input-container">
-                <label for="accountingQuantity" class="input-label">Учётное количество:</label>
-                <input type="number" id="accountingQuantity" name="accountingQuantity" />
+                <label for="inventory.accountingQuantity" class="input-label">Учётное количество:</label>
+                <input type="number" id="inventory.accountingQuantity" name="inventory.accountingQuantity" />
             </div>
             <div class="input-container">
-                <label for="actualQuantity" class="input-label">Фактическое количество:</label>
-                <input type="number" id="actualQuantity" name="actualQuantity" />
+                <label for="inventory.actualQuantity" class="input-label">Фактическое количество:</label>
+                <input type="number" id="inventory.actualQuantity" name="inventory.actualQuantity" />
             </div>
             <input type="submit" value="Добавить цветок"/>
         </form>
